...
                                        40.0, 0.0, 40.0, 0.0),
                                    tabs: [
                                      Tab(
                                        text: 'Signup',
                                      ),
                                      Tab(
                                        key: ValueKey('LoginTab_jbxv'),
                                        text: 'Login',
                                      ),
                                    ],
                                    controller: _model.authTabBarController,
                                    onTap: (i) async {
                                      [() async {}, () async {}][i]();
...
                                                        .spaceEvenly,
                                                children: [
                                                  Container(
                                                    width: 350.0,
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'Login-Email_9xid'),
                                                      controller: _model
                                                          .loginEmailTextController,
                                                      focusNode: _model
                                                          .loginEmailFocusNode,
                                                      autofocus: false,
                                                      enabled: true,
...
                                                    ),
                                                  ),
                                                  Container(
                                                    width: 350.0,
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'Login-Password_ofit'),
                                                      controller: _model
                                                          .loginPasswordTextController,
                                                      focusNode: _model
                                                          .loginPasswordFocusNode,
                                                      autofocus: false,
                                                      enabled: true,
...
                                elevation: 0.0,
                                borderRadius: BorderRadius.circular(20.0),
                              ),
                            ),
                          if (_model.authTabBarCurrentIndex == 1)
                            FFButtonWidget(
                              key: ValueKey('Login-Button_w2k2'),
                              onPressed: () async {
                                if (_model.formKey2.currentState == null ||
                                    !_model.formKey2.currentState!.validate()) {
                                  return;
                                }
                                GoRouter.of(context).prepareAuthEvent();
...
