...
import 'lessons_model.dart';
export 'lessons_model.dart';

class LessonsWidget extends StatefulWidget {
  const LessonsWidget({super.key});

  static String routeName = 'Lessons';
  static String routePath = '/lessons';

  @override
  State<LessonsWidget> createState() => _LessonsWidgetState();
}

...
                                                                  ));
                                                                  safeSetState(
                                                                      () {});
                                                                },
                                                                child: Icon(
                                                                  key: ValueKey(
                                                                      'Uncompleted-Icon_mx8e'),
                                                                  Icons
                                                                      .check_box_outline_blank_rounded,
                                                                  color: FlutterFlowTheme.of(
                                                                          context)
                                                                      .primaryText,
                                                                  size: 32.0,
...
                                                                          0.0,
                                                                          0.0,
                                                                          0.0,
                                                                          4.0),
                                                                      child:
                                                                          Text(
                                                                        'Chapter 1',
                                                                        style: FlutterFlowTheme.of(context)
                                                                            .bodyLarge
                                                                            .override(
                                                                              font: GoogleFonts.inter(
                                                                                fontWeight: FlutterFlowTheme.of(context).bodyLarge.fontWeight,
                                                                                fontStyle: FlutterFlowTheme.of(context).bodyLarge.fontStyle,
...
