...
                              12.0, 0.0, 0.0, 0.0),
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            crossAxisAlignment: CrossAxisAlignment.start,
                            children: [
                              Text(
                                key: ValueKey('Text_aere'),
                                'Lesson 5 Quiz',
                                maxLines: 2,
                                style: FlutterFlowTheme.of(context)
                                    .titleLarge
                                    .override(
                                      font: GoogleFonts.inter(
...
                            EdgeInsetsDirectional.fromSTEB(0.0, 12.0, 0.0, 0.0),
                        child: Row(
                          mainAxisSize: MainAxisSize.max,
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            FFButtonWidget(
                              key: ValueKey('Submit-Button_q5v6'),
                              onPressed: () async {
                                safeSetState(() {});
                                if (widget.ans1 == _model.radioButton51Value) {
                                  FFAppState().correctAns5 =
                                      FFAppState().correctAns5 + 1;
                                  safeSetState(() {});
...
