...
                                              FlutterFlowTheme.of(context)
                                                  .brandStandardBold
                                                  .fontStyle,
                                        ),
                                  ),
                                  TextFormField(
                                    key: ValueKey('Shares-to-Buy_qlfm'),
                                    controller:
                                        _model.sharesToBuyTextController,
                                    focusNode: _model.sharesToBuyFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.sharesToBuyTextController',
                                      Duration(milliseconds: 2000),
...
                            child: Align(
                              alignment: AlignmentDirectional(0.0, 1.0),
                              child: Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    16.0, 0.0, 16.0, 16.0),
                                child: FFButtonWidget(
                                  key: ValueKey('Button_0ef5'),
                                  onPressed: () async {
                                    // When buy action is made, check if a number of sharees has been entered. Also check if the number is a posititve non-zero double with an accuracy up to the hundredths place.
                                    if ((_model.sharesToBuyTextController
                                                    .text !=
                                                '') &&
                                        ((double.tryParse(_model
...
